build/log/idf_py_stderr_output_2772425
/home/seanshea/esp_32_projects/clock-proto-1.0/main/main.c: In function 'on_default_url':
/home/seanshea/esp_32_projects/clock-proto-1.0/main/main.c:35:13: error: 'path' undeclared (first use in this function)
   35 |     sprintf(path, "/sdcard%s", req->uri);
      |             ^~~~
/home/seanshea/esp_32_projects/clock-proto-1.0/main/main.c:35:13: note: each undeclared identifier is reported only once for each function it appears in
/home/seanshea/esp_32_projects/clock-proto-1.0/main/main.c: At top level:
/home/seanshea/esp_32_projects/clock-proto-1.0/main/main.c:20:20: warning: 'BASE_PATH' defined but not used [-Wunused-variable]
   20 | static const char *BASE_PATH = "/sdcard";
      |                    ^~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4656: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
